add coin request

--- a/presentation/src/main/res/layout/fragment_detail.xml
+++ b/presentation/src/main/res/layout/fragment_detail.xml
@@ -24,4 +24,14 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/toolbar"
         tools:srcCompat="@tools:sample/avatars" />
+
+    <include
+        android:id="@+id/layout_loading"
+        layout="@layout/layout_progress"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:visibility="visible"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
