--- a/presentation/src/main/res/layout/item_epic.xml
+++ b/presentation/src/main/res/layout/item_epic.xml
@@ -14,7 +14,7 @@
         android:layout_marginStart="24dp"
         android:layout_marginTop="32dp"
         android:layout_marginEnd="24dp"
-        android:text="This image was taken by NASA's EPIC camera onboard the NOAA DSCOVR spacecraft"
+        tools:text="This image was taken by NASA's EPIC camera onboard the NOAA DSCOVR spacecraft"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
@@ -26,7 +26,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
-        android:text="11/09/2003"
+        tools:text="11/09/2003"
         app:layout_constraintBottom_toBottomOf="@+id/tv_location"
         app:layout_constraintStart_toEndOf="@+id/tv_location"
         app:layout_constraintTop_toTopOf="@+id/tv_location" />
